--- a/demo/union_demo.ui
+++ b/demo/union_demo.ui
@@ -23,8 +23,8 @@
    <widget class="QPushButton" name="pB_Connect">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>100</y>
+      <x>380</x>
+      <y>60</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -36,8 +36,8 @@
    <widget class="QPushButton" name="pB_Read">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>130</y>
+      <x>380</x>
+      <y>170</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -46,12 +46,25 @@
      <string>Read</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pB_Write">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>200</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Write</string>
+    </property>
+   </widget>
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>100</y>
-      <width>270</width>
+      <x>20</x>
+      <y>110</y>
+      <width>324</width>
       <height>46</height>
      </rect>
     </property>
@@ -70,10 +83,17 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="0" colspan="2">
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>DB_addr:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
       <widget class="QLineEdit" name="lE_address">
        <property name="text">
-        <string>1000</string>
+        <string>2</string>
        </property>
       </widget>
      </item>
